[gd_scene load_steps=24 format=3 uid="uid://dq6v1ubtjbrwo"]

[ext_resource type="Script" uid="uid://bpuvuvs5a1wt5" path="res://scripts/player.gd" id="1_fjrip"]
[ext_resource type="Texture2D" uid="uid://cbirgyuoup2he" path="res://Assets/IdlePlayer_ZO_test.png" id="1_tuyoq"]
[ext_resource type="Script" uid="uid://dgln8qajiwbip" path="res://scripts/States/StateMachine.gd" id="2_fjrip"]
[ext_resource type="Texture2D" uid="uid://dj74d7rg3s40l" path="res://Assets/DashPlayer_ZO_test.png" id="2_y4r1p"]
[ext_resource type="Script" uid="uid://bb7gi8a0k640w" path="res://scripts/States/idle.gd" id="3_smehm"]
[ext_resource type="Texture2D" uid="uid://cn0das1ddpygl" path="res://Assets/RunPlayer_ZO_test.png" id="4_d2wvv"]
[ext_resource type="Script" uid="uid://dypmhmshfxig7" path="res://scripts/States/walk.gd" id="4_ur7pv"]
[ext_resource type="Texture2D" uid="uid://cbfdtyachueij" path="res://Assets/WalkPlayer_ZO_test.png" id="5_3v2ag"]
[ext_resource type="Script" uid="uid://dtgfhe0s7ii7c" path="res://scripts/States/run.gd" id="5_y4r1p"]
[ext_resource type="Script" uid="uid://dy6dog41modc" path="res://scripts/States/dash.gd" id="6_d2wvv"]
[ext_resource type="Texture2D" uid="uid://d4loarl3iuomw" path="res://Assets/attack.png" id="11_d2wvv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_y4r1p")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko8m6"]
atlas = ExtResource("1_tuyoq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i6ae"]
atlas = ExtResource("1_tuyoq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7yd6"]
atlas = ExtResource("1_tuyoq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wly0c"]
atlas = ExtResource("1_tuyoq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xftef"]
atlas = ExtResource("1_tuyoq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqrff"]
atlas = ExtResource("1_tuyoq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju1fa"]
atlas = ExtResource("1_tuyoq")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("4_d2wvv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("5_3v2ag")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fjrip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko8m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i6ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7yd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wly0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xftef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqrff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju1fa")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_smehm"]
radius = 13.0
height = 54.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_fjrip")
metadata/_custom_type_script = "uid://bpuvuvs5a1wt5"

[node name="Mouse" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_fjrip")
animation = &"Walk"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_smehm")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_fjrip")
metadata/_custom_type_script = "uid://dgln8qajiwbip"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_smehm")
metadata/_custom_type_script = "uid://k2sf2cdn0ara"

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("4_ur7pv")
metadata/_custom_type_script = "uid://k2sf2cdn0ara"

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("5_y4r1p")
metadata/_custom_type_script = "uid://k2sf2cdn0ara"

[node name="Dashing" type="Node" parent="StateMachine"]
script = ExtResource("6_d2wvv")
metadata/_custom_type_script = "uid://k2sf2cdn0ara"

[node name="LengthTimer" type="Timer" parent="StateMachine/Dashing"]
wait_time = 0.3
one_shot = true

[node name="RechargeTimer" type="Timer" parent="StateMachine/Dashing"]
wait_time = 2.0

[node name="Weapon" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, 0)

[node name="Weapon2" type="Sprite2D" parent="Weapon"]
unique_name_in_owner = true
position = Vector2(18, 0)
texture = ExtResource("11_d2wvv")

[connection signal="timeout" from="StateMachine/Dashing/LengthTimer" to="StateMachine/Dashing" method="switch_state"]
[connection signal="timeout" from="StateMachine/Dashing/RechargeTimer" to="StateMachine/Dashing" method="dash_used"]
